some minor alignment fixes

--- a/MvcApplication1/Content/ProfilePage.css
+++ b/MvcApplication1/Content/ProfilePage.css
@@ -1,14 +1,40 @@
 ﻿body {
 }
 
+.column {
+    float: left;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+
+.left {
+    width: 25%;
+}
+
+.right {
+    width: 75%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+div.column {
+    margin-top: -45%;
+   
+}
+
 div.profile{
     border-style:solid;
     border-color:#56baed;
     border-width:thin;
-    margin-left:16%;
+    margin-left:26%;
     margin-top:2%;
     margin-bottom:2%;
-    margin-right:16%;
+    margin-right:1%;
     padding:1%;
 }
 
@@ -16,10 +42,10 @@ div.centre-column{
     border-style:solid;
     border-color:#56baed;
     border-width:thin;
-    margin-left:16%;
+    margin-left:26%;
     margin-top:2%;
     margin-bottom:2%;
-    margin-right:16%;
+    margin-right:1%;
     padding:1%;
 }
 
